tests/builder/prefix_non_string.stderr
error: prefix must be a string not `1`
 --> tests/builder/prefix_non_string.rs:4:11
  |
4 | #[builder(prefix = 1)]
  |           ^^^^^^^^^^

error[E0599]: no method named `set_item` found for struct `Example` in the current scope
  --> tests/builder/prefix_non_string.rs:10:33
   |
5  | struct Example {
   | -------------- method `set_item` not found for this struct
...
10 |     let ex = Example::default().set_item("balls");
   |                                 ^^^^^^^^ method not found in `Example`
